force-app/main/default/objects/LLC_BI__Data_Source_Item__c/LLC_BI__Data_Source_Item__c.object-meta.xml
<CustomObject>
    <description>This object contains information about the sort order and Data Sources for each Data Source Item.</description>
    <label>Data Source Item</label>
    <nameField>
        <label>Data Source Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Source Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>