force-app/main/default/objects/LLC_BI__Data_Source_Item__c/fields/LLC_BI__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Data_Source__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Data Source.</description>
    <label>Data Source</label>
    <referenceTo>LLC_BI__Data_Source__c</referenceTo>
    <relationshipLabel>Data Source Items</relationshipLabel>
    <relationshipName>Data_Source_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>