force-app/main/default/objects/LLC_BI__Data_Source_Item__c/fields/LLC_BI__Data_Source_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Data_Source_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional lookup field contains the lookup key to the associated Data Source Section.</description>
    <label>Data Source Section</label>
    <referenceTo>LLC_BI__Data_Source_Section__c</referenceTo>
    <relationshipLabel>Data Source Section Items</relationshipLabel>
    <relationshipName>Data_Source_Section_Items</relationshipName>
    <type>Lookup</type>
</CustomField>