force-app/main/default/objects/LLC_BI__Data_Source_Item__c/fields/LLC_BI__External_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Name__c</fullName>
    <description>The system automatically populates this field with the name of the component in the external output.</description>
    <label>External Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>