force-app/main/default/objects/LLC_BI__Data_Source_Item__c/fields/LLC_BI__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sort_Order__c</fullName>
    <description>This field determines order of the Data Source Item.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>